--- a/10_introduction.tex
+++ b/10_introduction.tex
@@ -7,5 +7,7 @@
 Not a comparison between threads and events
 Not for general programming, specific to Web
 
+How and how much events and actors can increase performance
+
 
 \section{Structure}
