--- a/20_technical.tex
+++ b/20_technical.tex
@@ -16,6 +16,7 @@ Originally, the Web was intended to be a network of interconnected text files, w
 The advent of \textit{AJAX}\footnote{Asynchrounous JavaScript and XML (Extensible Markup Language)} and mobile applications in the late 2000's changed requirements drastically. Rather than refreshing the whole view for every piece of information sent and received, data could now be transferred in a more granular fashion. By asynchronously communicating with an API\footnote{Application Programming Interfaces} endpoint in the background, operations like deleting an item from a list could be performed invisibly and ubiquitously without reloading the page context. Especially applications that aim to provide desktop-like capabilities -- commonly called Rich Internet Applications -- make heavy use of asynchronous requests \cite[p. 4]{Sencha2011}. This inherently also changed users' expectations for websites from anticipating a certain amount of load time to implicating real-time behaviour \cite{Garrett2005}. To achieve low latency while maintaining client-server information consistency, the server's performance has to meet the combined request frequency of all clients at a given point in time.
 
 \subsection{Request Frequency and Response Time}
+\label{lab:frequency}
 Since in many cases the responsiveness of the user interface depends on the duration of the server communication roundtrip, maintaining acceptable response times is often crucial \cite[p. 1]{Nadimpalli2000}. Request frequency and response time correlate in the sense that request frequency represents the demand on a server endpoint while response time -- given equally demanding operations per request -- can be interpreted as the potential of the server to meet the demand. When the processing limit of the server is met, response times become generally inversely proportional to the request frequency, as illustrated in figure \ref{fig:response_time} \cite{response_time}. At this point, the server may chose to neglect the request (ideally by returning the status code \textit{503 Service Unavailable} \cite{http}), not respond at all or even stop serving clients altogether (i.e. ``crash'').
 
 \begin{figure}
