--- a/60_conclusion.tex
+++ b/60_conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusion and Future Development} \newpage a \newpage a
+\chapter{Conclusion and Future Development}
 
 %\subsection{Node.scala} \newpage a \newpage a \newpage a \newpage a
 
@@ -7,5 +7,10 @@
 %threads_vs_events threads for different use-cases
 
 % reactive manifesto
+
+
+% async additions in spring and grails
+
+% grails 2.3 events api
 
 %C# 5 async
