--- a/10_introduction.tex
+++ b/10_introduction.tex
@@ -1,13 +1,14 @@
 \chapter{Introduction}
 
-\section{Motivation} \newpage a \newpage a
+\section{Motivation}
 
-\section{Objective} \newpage a
+\section{Objective}
 
 Not a comparison between threads and events
 Not for general programming, specific to Web
 
 How and how much events and actors can increase performance
 
+Chapters 2 and 3 research, 4 and 5 own work
 
 \section{Structure}
