--- a/10_introduction.tex
+++ b/10_introduction.tex
@@ -1,14 +1,17 @@
 \chapter{Introduction}
+No other recent technology has changed the way people interact as much as the World Wide Web has. The World Wide Web -- or Web, for short -- has a wide range of functionality, from simple content viewing to messaging to social networks. The popularity of the Web has spread from appealing solely to first-world businesses and younger people to almost all demographic and geographic sections. Instead of merely ``browsing'' the Web on an individual basis, today's Web is characterised by communication and collaborative consumption and creation of various digital content. Devices for Web access are no longer limited to personal computers, but include a variety of categories such as mobile phones and wearable computing and even more ubiquitous forms of computing like colour-changing lightbulbs. Frequently, completely new uses for the Web are discovered, often redefining existing beliefs and setting new trends. Amidst all these varying factors, one factor remains constant: Every Web-connected device is bound to communicate with a Web server in one way or the other.
 
 \section{Motivation}
+Web servers play the central part in Web communication. They started out as simple machines delivering static files to a limited number of clients. In just two decades, requirements for Web servers have changed completely. The popular social network \textit{Twitter}\footnote{\url{http://twitter.com}} handles more than 100000 requests per second on a regular basis -- this includes not only static files, but also complex computations and database operations. With the Web becoming ever more volatile and dynamic, fast and reliable server systems are a necessity. Large sites and services tend to use highly specialised servers and proprietary software to handle the growing demand. However, due to the openness of the Web, it is also possible to create Web services using openly available technologies and standard server systems. With both approaches, as in all economic situations, it is favourable to use a solution that is cost-effective while yielding high performance.
+
+However, many proven patterns of software development do not apply to situations in which a high number of independent operations has to be handled simultaneously, like when processing many Web requests at once. Such highly \textit{concurrent} operations often require alternative execution concepts and paradigms to be handled more efficiently, or -- when the request load is exceptionally high -- to be handled at all.
 
 \section{Objective}
+Currently, two similar alternatives to traditional programming paradigms are used by the industry to increase Web server performance and efficiency: Event- and actor-driven paradigms. This thesis aims to give an overview of these technologies by pointing out their characteristics differences and comparing their approaches. Furthermore, current technologies that implement the said paradigms are listed and reviewed in terms of usability and performance in order to analyse the current state of the art. The main goal, however, is to give a clear and educated statement about how and how much event- and actor-based paradigms can increase Web server performance and efficiency and how and to which extend the according technologies can be applied currently from the view of a developer. 
 
-Not a comparison between threads and events
-Not for general programming, specific to Web
-
-How and how much events and actors can increase performance
-
-Chapters 2 and 3 research, 4 and 5 own work
+On the other hand, this thesis does not try to define a paradigm that fits all general programming needs. It rather tries to find and isolate specific use-cases for certain paradigms with a strong focus on Web server development.
 
 \section{Structure}
+This thesis can be divided in two main sections: Chapter \ref{lab:technical} and \ref{lab:sota} consist mainly of research based on existing work, while chapter \ref{sec:impl} and \ref{lab:eval} contain almost solely original research and evaluations.
+
+At the beginning, chapter \ref{lab:technical} defines terms, definitions and criteria that are used without further explanation during the remainder of the thesis. Additionally, this chapter provides in-depth explanations of how essential concurrency models are structured and how they use system resources. Chapter \ref{lab:sota} features an overview of the current options when choosing a event- or actor-based technology for use with a Web server. For both event- and actor-based paradigms one solution is reviewed more thoroughly, another solution is portrayed as an alternative and other solutions are listed briefly. After that, chapter \ref{sec:impl} documents a live project realised with actor-based technologies and goes into detail about how different technologies were used in production settings in order to test the applicability of alternative paradigms. Lastly, chapter \ref{lab:eval} contains a performance evaluation of a traditional application and an actor-driven application with the goal of defining use-cases in which the respective technologies provide the better solution.
